test/classes/initializers/parentCall/inDefer.good
inDefer.chpl:4: In initializer:
inDefer.chpl:7: error: super.init() not allowed in defer statements
